--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,29 @@
 /* MAIN */
+
 /* SETUP */
+
 /* BASIC */
 @import '/css/basic/base.css';
+@import '/css/basic/layout.css';
+
 /* COMPONENTS */
 @import '/css/components/app-header.css';
+@import '/css/components/app-footer.css';
+
+
+/* Mail */
+
+/* SETUP */
+
+/* BASIC */
+
+/* COMPONENTS */
+
+
+/* KEEP */
+
+/* SETUP */
+
+/* BASIC */
+
+/* COMPONENTS */
