--- a/css/components/app-header.css
+++ b/css/components/app-header.css
@@ -1,3 +1,18 @@
-.app-header{
+.app-header {
+  background-color: lightblue;
+  height: 6vh;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px;
+}
 
+.link-container {
+  width: 200px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.nav-link {
+    text-decoration: none;
 }
