did the color picker

--- a/css/style.css
+++ b/css/style.css
@@ -32,3 +32,4 @@
 @import '/css/apps/keep/components/note-txt.css';
 @import '/css/apps/keep/components/note-video.css';
 @import '/css/apps/keep/components/note-todos.css';
+@import '/css/apps/keep/components/edit-note.css';
