--- a/css/basic/base.css
+++ b/css/basic/base.css
@@ -13,3 +13,51 @@ h5,
 h6 {
   margin: 0px;
 }
+
+.none{
+  background-color: #ffffff;
+}
+
+.grey {
+  background-color: #e8eaed;
+}
+
+.brown {
+  background-color: #e6c9a8;
+}
+
+.pink {
+  background-color: #fdcfe8;
+}
+
+.purple {
+  background-color: #d7aefb;
+}
+
+.dark-blue {
+  background-color: #aecbfa;
+}
+
+.blue {
+  background-color: #cbf0f8;
+}
+
+.green {
+  background-color: #ccff90;
+}
+
+.yellow {
+  background-color: #fff475;
+}
+
+.orange {
+  background-color: #fbbc04 ;
+}
+
+.red {
+  background-color: #f28b82 ;
+}
+
+.turquoise {
+  background-color: #a7ffeb;
+}
