--- a/css/apps/keep/components/edit-note.css
+++ b/css/apps/keep/components/edit-note.css
@@ -6,8 +6,8 @@
     flex-direction: column;
     align-items: start;
     /* width: max-content; */
-    width: 300px;
-    height: 150px;
+    width: 400px;
+    height: 32%;
     padding: 15px;
     border-radius: 5px;
     position: absolute;
@@ -30,7 +30,7 @@
     padding: 15px;
     width: 454px;
     height: 49px;
-    right: 87px;
+    right: 40px;
 }
 
 .color-picker{
