--- a/css/apps/keep/components/keep-app.css
+++ b/css/apps/keep/components/keep-app.css
@@ -1,16 +1,25 @@
 .grid {
   display: grid;
-  grid-template-columns: repeat(3,238px);
+  /* grid-template-columns: repeat(3,238px); */
+  grid-template-columns: repeat(auto-fill, minmax(238px,1fr));
+  /* grid-template-columns: repeat(auto-fit, 1fr); */
+  /* grid-auto-rows: minmax(min-content, max-content); */
     grid-auto-rows: 50px;
+    /* grid-auto-flow: column dense; */
     grid-auto-flow: dense;
-    row-gap: 35px;
-    column-gap: 10px;
+    /* grid-auto-flow: row dense; */
+    /* row-gap: 35px;
+    column-gap: 10px; */
     margin: 10px 30px;
+    width: 90vw;
+    min-height: 82vh;
+    gap: 30px;
 }
 
 .note {
+  /* display: inline-block; */
   border: 1px solid black;
   padding: 15px;
-  max-width: 238px;
+  width: 238px;
   height: fit-content;
 }
