--- a/css/apps/mail/components/mail-list.css
+++ b/css/apps/mail/components/mail-list.css
@@ -5,3 +5,12 @@
 .email-read{
     background-color: rgb(189, 189, 189);
 }
+
+.stars img{
+height: 16px;
+width: 16px
+}
+
+.mail>*{
+    font-family: Arial, Helvetica, sans-serif;
+}
