--- a/css/components/app-header.css
+++ b/css/components/app-header.css
@@ -1,10 +1,11 @@
 .app-header {
-  background-color: lightblue;
+  /* background-color: lightblue; */
   height: 6vh;
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 10px;
+  border-bottom: 1px solid var(--borderclr);
 }
 
 .link-container {
@@ -14,5 +15,33 @@
 }
 
 .nav-link {
-    text-decoration: none;
+  text-decoration: none;
+  /* font-weight: bold; */
 }
+.nav-link span{
+    font-family: copper;
+    font-size: 1.2em;
+    /* font-weight: bolder; */
+}
+
+.main-logo{
+  width: 110px;
+}
+
+.main-nav a{
+  color:var(--mainclr) 
+}
+
+.mail-link:hover{
+  color: var(--mailclr);
+}
+
+.note-link:hover{
+  color: var(--noteclr);
+}
+
+.book-link:hover{
+  color: var(--bookclr);
+}
+
+
