--- a/css/setup/vars.css
+++ b/css/setup/vars.css
@@ -2,6 +2,7 @@
     --mainclr: #6F69AC;
     --noteclr : #FFEBA1;
     --mailclr: #FD6F96;
+    --mailclropc: #fd6f9528;
     --bookclr: #95DAC1;
     --borderclr: #dbdcdd;
     /* --borderclr: #ECEFF0; */
