--- a/css/basic/helpers.css
+++ b/css/basic/helpers.css
@@ -4,3 +4,11 @@
 .flex.direction-column{
     flex-direction: column;
 }
+
+.flex.space-between{
+justify-content: space-between;
+}
+
+.flex.justify-center{
+justify-content: center;
+}
