--- a/css/apps/keep/components/keep-app.css
+++ b/css/apps/keep/components/keep-app.css
@@ -1,32 +1,39 @@
+.grid-container {
+  /* width: 70%; */
+  margin: 10px auto;
+}
+
 .grid {
   display: grid;
-  /* grid-template-columns: repeat(3,238px); */
-  grid-template-columns: repeat(auto-fill, minmax(238px,1fr));
-  /* grid-template-columns: repeat(auto-fit, 1fr); */
-  /* grid-auto-rows: minmax(min-content, max-content); */
-    grid-auto-rows: 50px;
-    /* grid-auto-flow: column dense; */
-    grid-auto-flow: dense;
-    /* grid-auto-flow: row dense; */
-    /* row-gap: 35px;
-    column-gap: 10px; */
-    margin: 10px 30px;
-    width: 90vw;
-    min-height: 82vh;
-    gap: 30px;
+  grid-template-columns: repeat(auto-fill, minmax(238px, 1fr));
+  grid-auto-rows: auto;
+  grid-auto-flow: dense;
+  grid-gap: 10px;
 }
 
 .note {
-  border: 1px solid black;
-  padding: 15px;
-  width: 238px;
-  height: fit-content;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  border-radius: 10px;
 }
 
-.add-method{
+.note.note-img,
+.note.note-video {
+  grid-row: span 3;
+}
+
+.add-method {
   margin: 10px auto;
   width: 300px;
   display: flex;
   justify-content: space-evenly;
   padding: 10px;
+}
+
+.pinned-notes{
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(238px, 1fr));
+  grid-auto-rows: auto;
+  grid-auto-flow: dense;
 }
