--- a/css/apps/keep/components/note-img.css
+++ b/css/apps/keep/components/note-img.css
@@ -1,3 +1,42 @@
+.note-img{
+    position: relative;
+    height: 100%;
+    
+}
+
 .note-img img{
     max-width: 100%;
+}
+
+.note-img .img-container{
+    max-width: 100%;
+    height: 150px;
+    background-size: cover;
+    margin-block-end: 1rem;
+}
+
+.note-img .content-container{
+    padding: 0 1rem;
+    margin-block-end: 1rem;
+}
+
+.content-container h1{
+    font-size: 1rem;
+    margin-block-end: 0.3125rem;
+}
+.content-container p{
+    font-size: 0.875rem;
+}
+
+.note-img .actions{
+    align-items: center;
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+    padding: 8px;
+    font-size: 1.25rem;
+}
+
+.actions label{
+    cursor: pointer;
 }
