--- a/css/basic/base.css
+++ b/css/basic/base.css
@@ -1,7 +1,11 @@
+*{
+  box-sizing: border-box;
+}
+
 html {
   font-family: roboto-reg;
   /* font-family: Arial, Helvetica, sans-serif; */
-  font-size: 1rem;
+  font-size: 16px;
 }
 
 body {
@@ -13,7 +17,8 @@ h2,
 h3,
 h4,
 h5,
-h6 {
+h6,
+p {
   margin: 0px;
 }
 
@@ -63,4 +68,11 @@ h6 {
 
 .turquoise {
   background-color: #a7ffeb;
+}
+
+.pin{
+  font-weight: bold;
+  position: absolute;
+    top: 15px;
+    left: 15px;
 }
