--- a/css/setup/vars.css
+++ b/css/setup/vars.css
@@ -5,6 +5,7 @@
     --mailclropc: #fd6f9528;
     --bookclr: #95DAC1;
     --borderclr: #dbdcdd;
+    --filterclr: #3C4043;
     /* --borderclr: #ECEFF0; */
     --readclr: #F5F7F7;
 }
