--- a/css/apps/mail/components/mail-filter.css
+++ b/css/apps/mail/components/mail-filter.css
@@ -1,6 +1,11 @@
 .mail-filter{
     width: 16rem;
 }
+
+.mail-filter>*{
+    font-family: product-reg;
+    color: var(--filterclr);
+}
 .mail-filter li{
     padding-left: 20px;
     height: 2rem;
@@ -24,4 +29,30 @@
 
 .filter-list{
     align-self: flex-start;
+}
+
+.new-mail-btn{
+    border: none;
+    height:3.125rem ;
+    width: 9.375rem;
+    background-color: white;
+    box-shadow: 0px 1px 2px 1px rgba(0,0,0,0.27);
+    border-radius: 30px;
+    align-self: center;
+    /* text-align: center; */
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px;
+    font-size: 1rem;
+    /* border: 1px ; */
+
+}
+.new-mail-btn:hover{
+    box-shadow: 0px 5px 16px 1px rgba(0,0,0,0.27);
+    background-color: var(--readclr);
+}
+
+.new-mail-btn img{
+    width: 25px;
 }
