designed thw notes

--- a/css/apps/keep/components/keep-app.css
+++ b/css/apps/keep/components/keep-app.css
@@ -16,6 +16,9 @@
   flex-direction: column;
   justify-content: space-between;
   border-radius: 10px;
+  overflow: hidden;
+  /* position: relative; */
+    height: 100%;
 }
 
 .note.note-img,
