--- a/css/apps/keep/components/note-todos.css
+++ b/css/apps/keep/components/note-todos.css
@@ -1,3 +1,29 @@
+.note-todos .content-container{
+    display: flex;
+    justify-content: space-between;
+    padding-block-start: 0.3125rem;
+}
+
+.content-container h1{
+    font-size: 1.15rem;
+    flex-grow: 1;
+    padding-inline-start: 0.625rem;
+}
+
+.note-todos ul{
+    list-style: none;
+    padding: 0;
+    padding-inline-start: 0.625rem;
+}
+
+ul li{
+    margin-block-end: 0.375rem;
+}
+
+li label{
+    margin-inline-start: 5px;
+}
+
 .done{
     text-decoration: line-through;
 }
