--- a/css/apps/keep/components/note-video.css
+++ b/css/apps/keep/components/note-video.css
@@ -1,4 +1,18 @@
-.note-video{
+.note-video iframe{
+    max-width: 100%;
+    margin-block-end: 1rem;
+}
 
-    
+.note-video .content-container{
+    padding: 0 1rem;
+    margin-block-end: 1rem;
+}
+
+.note-video .content-container h1{
+    font-size: 1rem;
+    margin-block-end: 0.625rem;
+}
+
+.content-container p{
+    font-size: 0.875rem;
 }
