--- a/css/apps/keep/components/keep-app.css
+++ b/css/apps/keep/components/keep-app.css
@@ -1,6 +1,8 @@
-.grid-container {
-  /* width: 70%; */
-  /* margin: 10px auto; */
+.search-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-block-end: 25px;
 }
 
 .grid {
@@ -9,6 +11,7 @@
   grid-auto-rows: auto;
   grid-auto-flow: dense;
   grid-gap: 10px;
+  transition: 2s;
 }
 
 .note {
@@ -17,7 +20,13 @@
   justify-content: space-between;
   border-radius: 10px;
   overflow: hidden;
-    height: 100%;
+  /* height: 100%; */
+  border: 1px solid #80808054;
+  transition: box-shadow .2s;
+}
+
+.note:hover{
+  box-shadow: 0px 2px 4px 1px #00000049;
 }
 
 .note.note-img,
@@ -25,15 +34,7 @@
   grid-row: span 3;
 }
 
-.add-method {
-  margin: 10px auto;
-  width: 300px;
-  display: flex;
-  justify-content: space-evenly;
-  padding: 10px;
-}
-
-.pinned-notes{
+.pinned-notes {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(238px, 1fr));
   grid-auto-rows: auto;
