style and user update

--- a/css/apps/mail/components/mail-search.css
+++ b/css/apps/mail/components/mail-search.css
@@ -8,6 +8,11 @@
     font-family: roboto-reg;
 }
 .mail-search input:focus{
-    outline: none;
-   
+    outline: none;   
+}
+
+.mail-search select{
+border: none;
+margin-left: 20px;
+align-self: center;
 }
