--- a/css/apps/mail/components/mail-filter.css
+++ b/css/apps/mail/components/mail-filter.css
@@ -1,5 +1,7 @@
 .mail-filter{
+    margin-top: 20px;
     width: 16rem;
+    /* max-width: 20vw; */
 }
 
 .mail-filter>*{
@@ -10,6 +12,12 @@
     padding-left: 20px;
     height: 2rem;
     line-height: 2rem;
+}
+.mail-filter img{
+  width: 16px;
+  margin-right: 5px;
+  margin-bottom: 2px;
+  vertical-align:middle;
 }
 .mail-filter li:hover{
     cursor: pointer;
@@ -51,6 +59,7 @@
 .new-mail-btn:hover{
     box-shadow: 0px 5px 16px 1px rgba(0,0,0,0.27);
     background-color: var(--readclr);
+    cursor: pointer;
 }
 
 .new-mail-btn img{
