a bit more css in the edit modal

--- a/css/style.css
+++ b/css/style.css
@@ -41,4 +41,5 @@
 @import './apps/keep/components/note-txt.css';
 @import './apps/keep/components/note-video.css';
 @import './apps/keep/components/note-todos.css';
+@import './apps/keep/components/screen.css';
 @import './apps/keep/components/edit-note.css';
