--- a/css/apps/keep/components/edit-note.css
+++ b/css/apps/keep/components/edit-note.css
@@ -4,10 +4,11 @@
     z-index: 1;
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
     align-items: start;
     width: 400px;
-    height: 32%;
-    padding: 15px;
+    height: fit-content;
+    padding: 20px;
     border-radius: 5px;
     position: absolute;
     transform: translate(-50%, -50%);
@@ -17,4 +18,68 @@
     display: flex;
     flex-direction: column;
     align-items: start;
+}
+
+.edit-note .input-sec{
+display: flex;
+flex-direction: column;
+width: 100%;
+}
+
+.input-sec textarea,
+.input-sec input{
+    border: none;
+    background-color: inherit;
+    padding: 10px;
+    
+}
+
+.input-sec textarea,
+.input-sec input:focus{
+    outline: none;
+}
+
+.input-sec input{
+    font-weight: bold;
+    font-size: 1.15rem;
+}
+
+.input-sec textarea{
+    font-size: 0.875rem;
+}
+
+.edit-actions{
+    width: 100%;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+/* .edit-actions button{
+    background: none;
+    border: none;
+} */
+.edit-actions button,
+.edit-actions label{
+    border: none;
+    background-color: inherit;
+    font-size: 1.5rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 40px;
+    height: 40px;
+}
+
+.edit-actions button,
+.edit-actions label:hover {
+    cursor: pointer;
+    border-radius: 50%;
+    background-color: var(--noteclr);
+  }
+
+
+.edit-txt{
+    width: 100%;
+    margin-block-end: 10px;
 }
