--- a/css/apps/keep/components/keep-app.css
+++ b/css/apps/keep/components/keep-app.css
@@ -11,7 +11,7 @@
   grid-auto-rows: auto;
   grid-auto-flow: dense;
   grid-gap: 10px;
-  transition: 2s;
+  /* transition: 2s; */
 }
 
 .note {
@@ -22,16 +22,16 @@
   overflow: hidden;
   /* height: 100%; */
   border: 1px solid #80808054;
-  transition: box-shadow .2s;
+  transition: box-shadow 0.2s;
 }
 
-.note:hover{
+.note:hover {
   box-shadow: 0px 2px 4px 1px #00000049;
 }
 
 .note.note-img,
 .note.note-video {
-  grid-row: span 3;
+  grid-row: span 2;
 }
 
 .pinned-notes {
@@ -39,4 +39,6 @@
   grid-template-columns: repeat(auto-fill, minmax(238px, 1fr));
   grid-auto-rows: auto;
   grid-auto-flow: dense;
+  grid-gap: 10px;
+  margin-block-end: 20px;
 }
