--- a/css/apps/keep/components/note-todos.css
+++ b/css/apps/keep/components/note-todos.css
@@ -4,7 +4,11 @@
     padding-block-start: 0.3125rem;
 }
 
-.content-container h1{
+.note-todos .content-container{
+    padding-inline-start: 0.625rem;
+}
+
+.note-todos h1{
     font-size: 1.15rem;
     flex-grow: 1;
     padding-inline-start: 0.625rem;
