--- a/css/basic/base.css
+++ b/css/basic/base.css
@@ -104,7 +104,7 @@ p {
   right: 40px;
 }
 
-.color{
+.color {
   display: inline;
   height: 28px;
   width: 28px;
@@ -112,7 +112,7 @@ p {
   box-shadow: inset 0 0 0px 1px #00000042;
 }
 
-.color:hover{
+.color:hover {
   cursor: pointer;
   box-shadow: inset 0 0 0px 1px black;
 }
@@ -121,4 +121,8 @@ p {
   position: absolute;
   width: 25px;
   margin: 10px;
+}
+
+textarea {
+  resize: none;
 }
