--- a/css/basic/helpers.css
+++ b/css/basic/helpers.css
@@ -13,6 +13,27 @@ justify-content: space-between;
 justify-content: center;
 }
 
+.flex.around {
+    justify-content: space-around;
+  }
+  
+  .flex.align-center {
+    align-items: center;
+  }
+  
+  .flex.justify-center {
+    justify-content: center;
+  }
+  
+  .flex.column {
+    flex-direction: column;
+  }
+  
+  .flex.grow {
+    flex-grow: 0.5;
+  }
+  
+
 /* GRID ROWS SPANS */
 
 .span2{
