--- a/css/apps/keep/components/edit-note.css
+++ b/css/apps/keep/components/edit-note.css
@@ -1,85 +1,170 @@
-.edit-note{
-    left: 50%;
-    top: 50%;
-    z-index: 1;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: start;
-    width: 400px;
-    height: fit-content;
-    padding: 20px;
-    border-radius: 5px;
-    position: absolute;
-    transform: translate(-50%, -50%);
+.edit-note {
+  left: 50%;
+  top: 50%;
+  z-index: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: start;
+  width: 400px;
+  height: fit-content;
+  padding: 20px;
+  border-radius: 5px;
+  position: absolute;
+  transform: translate(-50%, -50%);
 }
 
-.form-container{
-    display: flex;
-    flex-direction: column;
-    align-items: start;
+.form-container {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
 }
 
-.edit-note .input-sec{
-display: flex;
-flex-direction: column;
-width: 100%;
-}
-
-.input-sec textarea,
-.input-sec input{
-    border: none;
-    background-color: inherit;
-    padding: 10px;
-    
+.edit-note .input-sec {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
 }
 
 .input-sec textarea,
-.input-sec input:focus{
-    outline: none;
+.input-sec input {
+  border: none;
+  background-color: inherit;
+  padding: 10px;
 }
 
-.input-sec input{
-    font-weight: bold;
-    font-size: 1.15rem;
+.input-sec textarea,
+.input-sec input:focus {
+  outline: none;
 }
 
-.input-sec textarea{
-    font-size: 0.875rem;
+.input-sec > :first-child {
+  font-weight: bold;
+  font-size: 1.15rem;
 }
 
-.edit-actions{
-    width: 100%;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
+.input-sec > :last-child {
+  font-size: 0.875rem;
 }
 
-/* .edit-actions button{
-    background: none;
-    border: none;
-} */
-.edit-actions button,
-.edit-actions label{
-    border: none;
-    background-color: inherit;
-    font-size: 1.5rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 40px;
-    height: 40px;
+.edit-actions {
+  width: 100%;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
 }
 
 .edit-actions button,
+.edit-actions label {
+  border: none;
+  background-color: inherit;
+  font-size: 1.5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 40px;
+  height: 40px;
+}
+
+.edit-actions button:hover,
 .edit-actions label:hover {
-    cursor: pointer;
-    border-radius: 50%;
-    background-color: var(--noteclr);
-  }
+  cursor: pointer;
+  border-radius: 50%;
+  background-color: var(--noteclr);
+}
 
+.edit-txt {
+  width: 100%;
+  margin-block-end: 10px;
+}
 
-.edit-txt{
-    width: 100%;
-    margin-block-end: 10px;
+.edit-img img {
+  margin-block-end: 10px;
+}
+
+.edit-todos {
+  width: 100%;
+}
+
+.edit-todos > :first-child {
+  border: none;
+  background-color: inherit;
+  padding: 10px;
+  font-weight: bold;
+  font-size: 1.15rem;
+}
+
+.edit-todos .input-add-todo {
+  padding: 10px;
+  /* margin-block-end: 10px; */
+}
+
+.edit-note .add-todo {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  width: 100%;
+}
+
+.edit-note .add-todo {
+  border-bottom: 1px solid #80808042;
+}
+
+.add-todo input[type="text"] {
+  border: none;
+  background-color: inherit;
+  flex-grow: 0.5;
+  padding: 2px 7px;
+  margin: 5px 0;
+}
+
+.add-todo input[type="text"]:focus {
+  outline: none;
+}
+
+.edit-todos .write-todo {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  margin-block-end: 10px;
+}
+
+.write-todo input {
+  flex-grow: 0.5;
+  border: none;
+  background-color: inherit;
+  border-block-end: 1px solid #80808042;
+  height: 35px;
+}
+
+.write-todo input:focus {
+  outline: none;
+}
+
+.write-todo button {
+  border: none;
+  padding: 5px;
+  background-color: inherit;
+  height: 60px;
+}
+
+.write-todo button:hover {
+  cursor: pointer;
+  border-radius: 50%;
+  background-color: var(--noteclr);
+}
+
+.add-todo button {
+  font-size: 1rem;
+  border: none;
+  background: inherit;
+  display: flex;
+  align-items: center;
+  height: 25px;
+}
+
+.add-todo button:hover {
+  cursor: pointer;
+  border-radius: 50%;
+  background-color: var(--noteclr);
 }
