--- a/css/apps/book/books-app.css
+++ b/css/apps/book/books-app.css
@@ -1,7 +1,9 @@
 .books-app {
-  background-color: lightblue;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  margin: 0 auto;
 }
+
+
