--- a/css/components/app-header.css
+++ b/css/components/app-header.css
@@ -1,11 +1,10 @@
 .app-header {
-  /* background-color: lightblue; */
-  /* height: 6vh; */
   display: flex;
   height: 4rem;
   justify-content: center;
   align-items: center;
   border-bottom: 1px solid var(--borderclr);
+  box-shadow: 0 1px 15px 2px #00000033;
 }
 
 .header-content{
@@ -24,16 +23,12 @@
 
 .nav-link {
   text-decoration: none;
-  /* font-weight: bold; */
+  
 }
 .nav-link span{
     font-family: copper;
     font-size: 1.2em;
-    /* font-weight: bolder; */
 }
-/* .nav-link:hover span{
-  color:var(--mainclr)
-} */
 
 .main-logo{
   width: 110px;
