--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,7 @@
 /* COMPONENTS */
 @import './components/app-header.css';
 @import './components/app-footer.css';
+@import './components/user-msg.css';
 
 
 /* Mail */
@@ -52,3 +53,5 @@
 @import './apps/keep/components/note-todos.css';
 @import './apps/keep/components/screen.css';
 @import './apps/keep/components/edit-note.css';
+
+@import './basic/mq.css';
