--- a/css/components/app-header.css
+++ b/css/components/app-header.css
@@ -4,7 +4,7 @@
   justify-content: center;
   align-items: center;
   border-bottom: 1px solid var(--borderclr);
-  box-shadow: 0 1px 15px 2px #00000033;
+  box-shadow: 0px 1px 11px -4px rgba(0,0,0,0.74);
 }
 
 .header-content{
